--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -19,12 +19,12 @@ jobs:
     - name: Build with Maven
       run: mvn compile
       
-  security-check:
-    runs-on: ubuntu-latest
-    needs: compile
-
-    steps:
+ security-check:
+  runs-on: ubuntu-latest
+  needs: compile
+  steps:
     - uses: actions/checkout@v4
+
     - name: Trivy Installation
       run: |
         sudo apt-get install -y wget apt-transport-https gnupg lsb-release
@@ -38,9 +38,10 @@ jobs:
 
     - name: Gitleaks Installation
       run: sudo apt install gitleaks -y
+
     - name: Gitleaks Code Scan
-      run: gitleaks detect source . -r gitleaks-report.json -f json
-      
+      run: gitleaks detect --source . --report-format json --report-path gitleaks-report.json
+
       
   
   
